--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -35,6 +35,11 @@ spring.datasource.druid.use-global-data-source-stat=true
 logging.level.root=info
 logging.file.name=log/coop.log
 
+##################    JWT    ################
+jwt.header=JWTHeaderName
+jwt.secret=sdadjhkjljs
+jwt.expiration=3600000
+
 
 
 
